fix: grid images now align proportionally, which is better than previously

--- a/src/index.css
+++ b/src/index.css
@@ -242,32 +242,44 @@ body {
 
 /*COMPONENT: ImageGrid*/
 
+
+
+
+
 .images-grid {
   display: flex;
   justify-content: center;
   align-items: center;
-  width: 70%;
+  width: 65%;
   margin: 0 auto;
 }
 
 .grid-wrapper {
   display: grid;
-
-  gap: 2em;
+  gap: 1em;
   width: 100%;
-  grid-auto-flow: row;
-  justify-items: stretch;
-  align-items: stretch;
+  grid-template-columns: 2fr 1fr;
+  grid-auto-flow: dense;
+  margin: 3rem auto;
 }
 
+
+.image-container {
+  width: 100%;
+  height: 100%;
+}
+
+
 .image-container > a {
-  display: inline-block;
-    overflow: hidden;
+  display: inline-block; 
+    overflow: hidden; 
     border: 1px solid #000;
     background-color: #000;
 }
 
 .image-item {
+  width: 500px;
+  height: 300px;
   opacity: 0.7;
   -webkit-transition: all 1s ease-in-out;
   -moz-transition: all 1s ease;
@@ -288,8 +300,6 @@ body {
 
 
 
-/*Anchor Tag*/
-
 .image-container > a {
   position: relative;
   display: inline-block; 
@@ -305,3 +315,4 @@ body {
     font-size: 2rem;
     color: var(--main-pink);
 }
+
